Finished backend for channels, added channel.js
